<resources>
    <string name="app_name">flightRobot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ALIAS</string>
    <string name="nav_header_subtitle">智能飞行管理系统</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">退出登录</string>
    <string name="agree">确认修改</string>
    <string name="agree2stop">确认停止</string>
    <string name="push">确认发布</string>
    <string name="delete">确认删除</string>
    <string name="disagree">取消</string>
    <string name="fix_title">通知</string>
    <string name="fix_mes">是否修改该参数</string>
    <string name="push_mes">是否确认发布该任务</string>
    <string name="push_success">发布成功</string>
    <string name="orderfix_mes">是否确认暂停并修改该任务</string>
    <string name="orderstop_mes">是否确认立即终止任务</string>
    <string name="query">搜索...</string>
    <string name="table_pagination_details">Page %d, showing items %d to %d.</string>
    <string name="default_url">http://192.168.1.32</string>
    <string name="com_url">http://192.168.1.20:7890</string>>
    <string name="cam_url">http://192.168.1.100</string>>
    <string name="loading">登录中...</string>
    <string name="loginSuccess">登录成功</string>

    <string name="menu_home">飞行任务库</string>
    <string name="menu_gallery">飞行历史任务</string>
    <string name="menu_order">飞行任务监控</string>
    <string name="menu_slideshow">飞行信息管理</string>
    <string name="menu_sys_monitor">系统监控</string>
    <string name="menu_files">电子资料包</string>
    <string name="menu_settings">系统设置</string>
    <string name="menu_detect">系统自检</string>
    <string name="login">登录</string>

    <string name="inf_jd">经度</string>
    <string name="inf_wd">纬度</string>
    <string name="inf_gd">高度</string>
    <string name="inf_yxgd">预选高度</string>
    <string name="inf_sd">速度</string>
    <string name="inf_yxsd">预选速度</string>
    <string name="inf_czsd">垂直速度</string>
    <string name="inf_yxczsd">预选垂直速度</string>
    <string name="inf_hx">航向</string>
    <string name="inf_yxhx">预选航向</string>
    <string name="inf_wxdgd">无线电高度</string>
    <string name="inf_mhs">马赫数</string>
    <string name="inf_plj">偏流角</string>
    <string name="inf_gj">攻角</string>
    <string name="inf_chj">侧滑角</string>
    <string name="inf_fdjzs">发动机转速</string>
    <string name="inf_fdjpqwd">发动机排气温度</string>
    <string name="inf_fdjymjd">发动机油门角度</string>
    <string name="inf_fdjnj">发动机扭矩</string>
    <string name="inf_bjhgj">本机横滚角</string>
    <string name="inf_bjfyj">本机俯仰角</string>
    <string name="inf_bjzyhgj">本机指引横滚角</string>
    <string name="inf_bjzyfyj">本机指引俯仰角</string>


    <!-- menu -->
    <string name="sort_ascending">Sort Ascending</string>
    <string name="sort_descending">Sort Descending</string>
    <string name="hide_row">Hide Row 3</string>
    <string name="show_row">Show Row 3</string>
    <string name="scroll_to_row_position">Scroll to Row 100</string>
    <string name="scroll_to_column_position">Scroll to column 50</string>
    <string name="show_hide_column">Show/Hide column 5</string>

    <!-- tableview controls -->
    <string-array name="items_per_page">
        <item>10</item>
        <item>20</item>
        <item>25</item>
        <item>50</item>
        <item>All</item>
    </string-array>
    <string-array name="cam">
        <item>Cam_01</item>
        <item>Cam_02</item>
        <item>Cam_03</item>
        <item>Cam_04</item>
        <item>Cam_05</item>
        <item>Cam_06</item>
    </string-array>
    <string name="title_activity_order_list">OrderListActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_order">CreateOrderActivity</string>

</resources>