<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@mipmap/task"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@mipmap/list"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/info"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_sys_monitor"
            android:icon="@mipmap/monitor"
            android:title="@string/menu_sys_monitor" />
        <item
            android:id="@+id/nav_files"
            android:icon="@mipmap/file"
            android:title="@string/menu_files" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/list"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/setting"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_detect"
            android:icon="@mipmap/setting"
            android:title="@string/menu_detect" />
    </group>
</menu>