<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.flightrobot.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.flightrobot.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.flightrobot.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_sys_monitor"
        android:name="com.example.flightrobot.ui.sysmonitor.SysmonitorFragment"
        android:label="@string/menu_sys_monitor"
        tools:layout="@layout/fragment_sysmonitor"/>
    <fragment
        android:id="@+id/nav_files"
        android:name="com.example.flightrobot.ui.files.FilesFragment"
        android:label="@string/menu_files"
        tools:layout="@layout/fragment_files"/>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.flightrobot.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings"/>
    <fragment
        android:id="@+id/nav_detect"
        android:name="com.example.flightrobot.ui.settings.ATFragment"
        android:label="@string/menu_detect"
        tools:layout="@layout/autodetect"/>
</navigation>